# pdf_reading_chatbot

./: .gitignore  README.md  app.py  hello.py  pyproject.toml
model/: comparison_results_data_structure.py  prompt_template.py  prompt_templates.py
pipelines/: mistral_llamaindex.py  openai_langchain.py  performance_evaluation.py
pipelines/utils/: extract_scores.py  get_perf_comparison_results.py  get_split_docs.py  get_uploaded_doc_summary.py  perf_evals_dataset.py  performance_evaluators.py
rag_pipelines/: mistral_llamaindex.py  openai_langchain.py
view/styles/: st_custom_styles.py
view/utils/: comparison_table.py  render_bot_messages.py
